--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/samleemcknight/final_project_planning#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "expess": "^0.0.1-security"
+    "express": "^4.17.1",
+    "sequelize": "^6.6.2"
   }
 }
