specifies node v in package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "14.15.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/samleemcknight/final_project_planning.git"
