--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "14.15.4"
+    "node": "14.15.4",
+    "npm": "7.5.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/samleemcknight/final_project_planning.git"
+    "url": "git+https://github.com/samleemcknight/final_project_api.git"
   },
   "keywords": [],
   "author": "",
